scan history & repeat
